# emoji-smith

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CLAUDE-AGENT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.webhook  Dockerfile.worker  GCP.md  ISSUE_168_BRANCH.md  OBSERVABILITY_PLAN.md  README.md  SETUP.md  SLACK-APP-SETUP.md  TROUBLESHOOTING.md  gcp_migration_plan.md  justfile  pyproject.toml  pytest.ini  requirements-webhook.txt  run_dev.sh
.claude/commands/: review_arch.md  review_prs.md  review_test_quality.md
.github/: CLAUDE.md
.github/workflows/: claude.yml  deploy-gcp.yml  deploy.yml  validate-lambda-package.yml
docs/: CHANGELOG.md  CLAUDE-DEPLOYMENT.md  CLAUDE-DOMAIN.md  CLAUDE-INFRASTRUCTURE.md  CLAUDE-SECURITY.md  CLAUDE-TESTING.md  GCP.md  TESTING-ORGANIZATION.md  aws-removal-plan.md  claude-github-action.md  dual-lambda.md  google-nano-banana-migration.md
docs/adr/: 001-use-ddd-architecture.md  002-two-lambda-separation.md  003-repository-pattern.md  004-migrate-to-gcp.md
docs/architecture/: cross_context_dependency_analysis.md  dual-lambda.md  structured-logging-design.md
docs/architecture/historical/: arch_quality_report_06_19.md  arch_quality_report_07_04_2025.md  arch_quality_report_12_22_2025.md  dead_code_report_12_23_2025.md  github_issues_ddd_compliance.md  index.md
docs/backup/: CLAUDE-original-20250621.md
docs/claude/templates/: new-entity-checklist.md
docs/features/: modal-enhancement.md  multi-provider-images.md
docs/guides/: testing.md
docs/integrations/: claude-github-action.md
docs/testing/: testing-guidelines.md
docs/testing/historical/: test_quality_review_07_04_2025.md  test_quality_review_12_23_2025.md  test_review_06_19.md
infra/: README.md  app.py  cdk.json
infra/stacks/: emoji_smith_stack.py
infra_gcp/terraform/: cloud_run_webhook.tf  iam.tf  outputs.tf  providers.tf  pubsub.tf  secrets.tf  terraform.tfvars.example  versions.tf  workload_identity.tf
scripts/: agent-setup.sh  build_webhook_package.sh  check-quality.sh  check-test-names.py  check_test_names.py  check_test_naming.py  claude-refresh.sh  debug-bundle.sh  dev-setup.sh  quick-test.sh  run-tests.sh
src/: CLAUDE.md  __init__.py  lambda_handler.py  webhook_handler.py  worker_handler.py
src/emojismith/: __init__.py  app.py  dev_server.py
src/emojismith/application/: create_webhook_app.py  modal_builder.py
src/emojismith/application/handlers/: __init__.py  slack_webhook.py  slack_webhook_handler.py
src/emojismith/application/services/: __init__.py  ai_prompt_service.py  emoji_service.py
src/emojismith/application/use_cases/: __init__.py  build_prompt_use_case.py
src/emojismith/domain/: CLAUDE.md  __init__.py  dtos.py  errors.py  exceptions.py
src/emojismith/domain/entities/: __init__.py  emoji_generation_job.py  generated_emoji.py  queue_message.py  slack_message.py
src/emojismith/domain/services/: __init__.py  (+10 more)
src/emojismith/infrastructure/: CLAUDE.md  image_processor.py  wiring.py
src/emojismith/presentation/: __init__.py  modal_builder.py
src/shared/: __init__.py
src/shared/domain/: __init__.py  dtos.py  entities.py  slack_message.py  value_objects.py
src/shared/infrastructure/: __init__.py  logging.py
src/webhook/: __init__.py  handler.py
src/webhook/domain/: __init__.py  emoji_generation_job.py  signature_validator.py  slack_message.py  slack_payloads.py  webhook_request.py
src/webhook/infrastructure/: __init__.py  slack_api.py  slack_signature_validator.py  sqs_job_queue.py
src/webhook/repositories/: __init__.py  job_queue_repository.py  slack_repository.py
src/webhook/security/: __init__.py  slack_signature_validator.py  webhook_security_service.py
stubs/: README.md  dotenv.pyi
stubs/fastapi/: __init__.pyi
stubs/mangum/: __init__.pyi
stubs/openai/: __init__.pyi
stubs/slack_sdk/: errors.pyi
stubs/slack_sdk/web/: async_client.pyi  async_slack_response.pyi
stubs/uvicorn/: __init__.pyi
terraform/: .terraform.lock.hcl  apis.tf  artifact_registry.tf  cloud_run_webhook.tf  cloud_run_worker.tf  iam.tf  variables.tf  versions.tf  workload_identity.tf
tests/: CLAUDE.md  __init__.py  conftest.py
tests/contract/google/: __init__.py  test_gemini_api.py
tests/contract/slack/: test_slack_payloads.py
tests/integration/: test_background_worker_integration.py  test_dual_lambda_e2e.py  test_dual_lambda_integration.py  test_emoji_sharing_flow.py  test_lambda_package.py  test_slack_api_integration.py  test_slack_file_sharing_integration.py  test_slack_integration.py  test_slack_webhook_e2e.py  test_slack_webhook_handler_e2e.py  test_sqs_job_queue_integration.py  test_webhook_api_e2e.py  test_webhook_handler_flow.py  test_worker_handler_integration.py
tests/integration/aws/: test_aws_secrets_loader.py
tests/integration/jobs/: test_sqs_job_queue_integration.py
tests/integration/openai/: test_openai_api.py  test_openai_api_http.py
tests/integration/slack/: test_slack_file_sharing.py
tests/performance/concurrency/: test_concurrent_requests.py
tests/security/authentication/: test_slack_signature_validator.py  test_webhook_security_validation.py
tests/security/validation/: test_security_validation.py
tests/unit/: __init__.py  test_app.py  test_aws_secrets_loader.py  test_concurrent_requests.py  test_config_validation.py  test_lambda_handler.py  test_package.py  test_performance_benchmarks.py  test_security_validation.py  test_worker_handler.py  test_worker_service_config.py
tests/unit/application/: test_modal_builder.py
tests/unit/domain/: test_emoji_generation_job.py  test_emoji_specification.py  test_generated_emoji.py  test_job_queue_repository.py  test_openai_repository.py  test_slack_message.py  test_slack_repository.py  test_webhook_request.py
tests/unit/infrastructure/: __init__.py  test_cdk_stack.py  test_logging.py  test_openai_api.py  test_slack_api.py
tests/unit/presentation/: test_modal_builder.py
tests/unit/scripts/: test_build_webhook_package.py
tests/unit/webhook/: test_slack_payloads.py  test_webhook_handler.py
(+124 files in other folders)
